fixed grid spacing

--- a/app/assets/stylesheets/components/_albumtracks.scss
+++ b/app/assets/stylesheets/components/_albumtracks.scss
@@ -1,11 +1,12 @@
 .album-tracks-area {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-column-gap: 20px;
+    grid-column-gap: 40px;
     row-gap: 40px;
     // padding: 75px 20px 75px 20px;
     width: 100%;
     // margin-left: 280px;
+    padding-bottom: 200px;
 }
 
 // video.track-play {
